# Industry-AI-OS

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_MEMORY.md  README.md  RUNNING.md  pyproject.toml
deploy/: Dockerfile.service  docker-compose.infra.yml  docker-compose.yml
deploy/cerbos/: config.yaml
deploy/cerbos/policies/: resource_audit.yaml  resource_chat.yaml  resource_connector.yaml  resource_document.yaml  resource_tenant.yaml  resource_workflow.yaml
deploy/cerbos/policies/_schemas/: derived_roles.yaml
deploy/helm/: Chart.yaml  README.md  values.yaml
deploy/helm/templates/: _helpers.tpl  app.yaml  configmap.yaml  ingress.yaml  seed-job.yaml
deploy/keycloak/: realm-export.json
deploy/litellm/: config.yaml
deploy/migrations/: alembic.ini  env.py
deploy/migrations/versions/: 0001_initial_platform_schema.py  0002_workflow_pack_framework.py  0003_user_profiles.py  0004_workflow_authoring_and_entitlements.py  0005_connector_access_requests.py
deploy/otel/: collector-config.yaml
deploy/postgres/init/: 00-databases.sql
deploy/scripts/: export_graphql_sdl.py  health.sh
deploy/seed/: Dockerfile  run.sh  seed.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MILESTONE_2.md  MULTI_TENANCY.md
docs/adr/: 0000-multi-tenancy-isolation.md  0001-identity-keycloak.md  0002-authorization-cerbos.md  0003-api-fastapi.md  0004-orchestration-langgraph.md  0005-llm-gateway-litellm.md  0006-workflows-temporal.md  0007-rag-llamaindex.md  0008-vector-store-pgvector.md  0009-document-parsing-docling.md  0010-object-storage-minio.md  0011-eventing-nats.md  0012-connectors-mcp-composio.md  0013-observability-langfuse-otel.md  0014-secrets-infisical.md  0015-workflow-pack-framework.md  0016-industry-configuration.md  0017-ai-assistant.md  0018-connectors-nango.md  0019-user-authored-workflows-and-connector-entitlements.md  README.md  _template.md
docs/api/: README.md  graphql.schema.graphql
packs/accounting/: pack.json
packs/accounting/prompts/: invoice_summary.md  invoice_validate.md
packs/accounting/workflows/: invoice_verification.json
packs/construction/: pack.json
packs/construction/prompts/: change_order_impact.md  daily_report.md  invoice_reconcile.md  progress_report.md  rfi_response.md
packs/construction/workflows/: change_order.json  daily_report.json  invoice_verification.json  progress_report.json  rfi.json
packs/demo/: pack.json
packs/demo/prompts/: summarize.md
packs/demo/workflows/: document_review.json
packs/legal/: pack.json
packs/litigation/: pack.json
services/admin/: pyproject.toml
services/admin/src/admin/: __init__.py  main.py
services/audit/: pyproject.toml
services/audit/src/audit/: __init__.py  main.py
services/authz/: pyproject.toml
services/authz/src/authz/: __init__.py  main.py
services/connectors/: pyproject.toml
services/connectors/src/connectors/: __init__.py  base.py  main.py  registry.py
services/connectors/tests/: test_entitlements.py
services/gateway/: pyproject.toml
services/gateway/src/gateway/: __init__.py  graphql_schema.py  main.py  ratelimit.py  routing.py
services/identity/: pyproject.toml
services/identity/src/identity/: __init__.py  keycloak_admin.py  main.py
services/knowledge/: pyproject.toml
services/knowledge/src/knowledge/: __init__.py  main.py  parsing.py  storage.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  assistant.py  graph.py  main.py  tracing.py
services/orchestrator/tests/: conftest.py  test_assistant.py
services/workflows/: pyproject.toml
services/workflows/src/workflows/: __init__.py  activities.py  main.py  pack_runtime.py  shared_defs.py  step_handlers.py  worker.py  workflow.py
services/workflows/tests/: test_pack_definitions.py
tests/smoke/: conftest.py  test_authz.py  test_e2e.py  test_health.py
