[project]
name = "aios-connectors"
version = "0.1.0"
description = "Industry AI OS — Connector Hub: MCP-style registry + gateway; the only layer that touches third-party APIs."
requires-python = ">=3.11"
dependencies = [
    "ai-os-shared",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
ai-os-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connectors"]
