[project]
name = "aios-gateway"
version = "0.1.0"
description = "Industry AI OS — API gateway: Keycloak JWT auth, tenant-context minting, rate limiting, REST + GraphQL routing."
requires-python = ">=3.11"
dependencies = [
    "ai-os-shared",
    "uvicorn[standard]>=0.30",
    "strawberry-graphql[fastapi]>=0.235",
    "redis>=5.0",
]

[tool.uv.sources]
ai-os-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
