[project]
name = "aios-knowledge"
version = "0.1.0"
description = "Industry AI OS — knowledge layer: MinIO storage, Docling parsing, chunking, pgvector RAG."
requires-python = ">=3.11"
dependencies = [
    "ai-os-shared",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "minio>=7.2",
    "llama-index-core>=0.11",
    # Docling is heavy; parsing degrades to plain-text extraction if unavailable.
    "docling>=2.0; python_version < '4.0'",
]

[tool.uv.sources]
ai-os-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge"]
