[project]
name = "aios-orchestrator"
version = "0.1.0"
description = "Industry AI OS — AI orchestrator: LangGraph agents over the LiteLLM gateway, streamed and traced."
requires-python = ">=3.11"
dependencies = [
    "ai-os-shared",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2.20",
    "langchain-core>=0.3",
    "langfuse>=2.50",
]

[tool.uv.sources]
ai-os-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
