[project]
name = "aios-workflows"
version = "0.1.0"
description = "Industry AI OS — durable workflows on Temporal + the generic document-review-approval flow."
requires-python = ">=3.11"
dependencies = [
    "ai-os-shared",
    "uvicorn[standard]>=0.30",
    "temporalio>=1.7",
]

[tool.uv.sources]
ai-os-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflows"]
